--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 						<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>,
 						<a href="https://linkedin.com/in/clairepaoletti" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>, or
 						<a href="https://instagram.com/clairepao/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+                        <ul class="social-links">
+                            <li><a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/pinterest.svg" width="20" height="20"></a></li>
+                            <li><a href="https://www.instagram.com/clairepao"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/instagram.svg" width="20" height="20"></a></li>
+                            <li><a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/linkedin.svg" width="20" height="20"></a></li>
+                            </ul>
 					</div>					
                 </p>
                 <br>
@@ -57,228 +62,7 @@
 				</p>
 				</div>
 				<!-- Add your other HTML elements here -->
-                <div class="footer-container">
-<div class="container-fluid">
-<div class="wrapper">
-<div class="row">
-<div class="col-lg-3 md-down-hidden">
-<div class="wrap wrap-left">
-<a href="https://petitefriture.com/fr/" class="logo">
-<img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/logo/petite-friture.svg" alt="Logo - Petite-Friture">
-</a>
-</div>
-</div>
-<div class="col-lg-9">
-<div class="wrap wrap-right">
-<div class="row">
-<div class="col-lg-4 order-lg-2">
-<div class="item md-down-ta-c">
-<p class="title-custom-xs mb-sm">Suivez-nous</p>
-<ul class="social-links">
-<li><a href="https://fr-fr.facebook.com/Petite-Friture-121485001239334/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/facebook.svg" alt="Petite-Friture" width="20" height="20"></a></li>
-<li><a href="https://www.pinterest.fr/petitefriture1/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/pinterest.svg" alt="Petite-Friture" width="20" height="20"></a></li>
-<li><a href="https://www.instagram.com/petitefriture/?hl=fr"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/instagram.svg" alt="Petite-Friture" width="20" height="20"></a></li>
-<li><a href="https://fr.linkedin.com/company/petite-friture"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/linkedin.svg" alt="Petite-Friture" width="20" height="20"></a></li>
-</ul>
-</div>
-<div class="item">
-<p class="title-custom-xs mb-sm">Newsletter</p>
-<form action="https://petitefriture.com/fr/#footer" method="post">
-<div class="newsletter-content">
-<button class="btn-newsletter" name="submitNewsletter" type="submit">
-<img src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/arrow-right.svg" alt="Petite-Friture" width="16" height="11">
-</button>
-<input class="form-control" name="email" type="text" value="" placeholder="Votre adresse e-mail" aria-labelledby="block-newsletter-label">
-<input type="hidden" name="action" value="0">
-</div>
-</form>
-<div class="rgpd-container" style="display: none;">
-<div class="rte">
-<p>En renseignant votre adresse email, vous acceptez de recevoir chaque mois notre communication (nouveautés, actualités...) par courrier électronique et vous prenez connaissance de notre Politique de confidentialité.</p>
-<p>Vous pouvez vous désinscrire à tout moment à l'aide des liens de désinscription ou en nous contactant à l'adresse : <a href="mailto:info@petitefriture.com">info@petitefriture.com</a>.</p>
-</div>
-<button class="btn btn-animated" name="submitNewsletter" type="submit">
-<span data-text="Valider">Valider</span>
-</button>
-</div>
-</div>
-</div>
-<div class="col-lg-8 order-lg-1">
-<div class="block-social">
-<ul>
-</ul>
-</div>
-<div class="linklist">
-<div class="row mkx-collapse-2 collapse-links">
-<div class="col-md-4 sm-down-mb-md">
-<ul id="footer_sub_menu_3" class="footer-menu">
-<li>
-<a id="link-custom-page-vertigo-3" class="title-custom-sm" href="http://petitefriture.com/fr/suspensions/903-1136-suspension-vertigo.html#/347-couleur-noir/353-taille-grande" title="">Vertigo</a>
-</li>
-<li>
-<a id="link-custom-page-designers-3" class="title-custom-sm" href="http://petitefriture.com/fr/page/designers" title="">Designers</a>
-</li>
-<li>
-<a id="link-custom-page-luminaire-3" class="title-custom-sm" href="http://petitefriture.com/fr/4019-luminaires" title="">Luminaire</a>
-</li>
-<li>
-<a id="link-custom-page-mobilier-3" class="title-custom-sm" href="http://petitefriture.com/fr/4025-mobilier" title="">Mobilier</a>
-</li>
-<li>
-<a id="link-custom-page-mobilier-de-jardin-3" class="title-custom-sm" href="http://petitefriture.com/fr/4026-mobilier-de-jardin" title="">Mobilier de jardin</a>
-</li>
-<li>
-<a id="link-custom-page-decoration-3" class="title-custom-sm" href="http://petitefriture.com/fr/4036-accessoires" title="">Decoration</a>
-</li>
-<li>
-<a id="link-custom-page-visualisez-tous-les-produits-3" class="title-custom-sm" href="https://petitefriture.com/fr/2-shop" title="">Visualisez tous les produits</a>
-</li>
-</ul>
-</div>
-<div class="col-md-4">
-<div class="collapse-item">
-<div class="collapse-header" id="heading-1" data-toggle="collapse" data-target="#collapse-links-1" aria-expanded="false" aria-controls="collapse-links-1">
-<p class="title">Services</p>
-<span class="icon icon-minus"><i class="fal fa-minus"></i></span>
-<span class="icon icon-plus"><i class="fal fa-plus"></i></span>
-</div>
-<div id="collapse-links-1" class="collapse-content collapse" data-parent=".mkx-collapse">
-<div class="collapse-inner">
-<ul id="footer_sub_menu_1">
-<li><a id="link-custom-page-trouvez-un-revendeur-1" class="custom-page-link" href="http://petitefriture.com/fr/ou-acheter-petite-friture" title="">Trouvez un Revendeur</a>
-</li>
-<li><a id="link-custom-page-faq-1" class="custom-page-link" href="http://petitefriture.com/fr/faqs" title="">F.A.Q.</a>
-</li>
-<li><a id="link-custom-page-service-client-1" class="custom-page-link" href="https://petitefriture.com/fr/page/contacter-petite-friture" title="">Service client</a>
-</li>
-<li><a id="link-custom-page-suivez-votre-commande-1" class="custom-page-link" href="http://petitefriture.com/fr/mon-compte" title="">Suivez votre commande</a>
-</li>
-<li><a id="link-custom-page-telechargez-le-catalogue-1" class="custom-page-link" href="https://www.dropbox.com/s/xnyv4nzy5xmvqic/Catalogue_2023.pdf?dl=0" title="" target="_blank">Téléchargez le catalogue</a>
-</li>
-<li><a id="link-custom-page-telechargez-la-brochure-assises-tapissees-1" class="custom-page-link" href="https://www.dropbox.com/sh/uq2ktaxzpwwboy6/AADkLCwb96JjPkeGkURrfnF6a?dl=0" title="" target="_blank">Téléchargez la brochure assises tapissées</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="col-md-4">
-<div class="collapse-item">
-<div class="collapse-header" id="heading-2" data-toggle="collapse" data-target="#collapse-links-2" aria-expanded="false" aria-controls="collapse-links-2">
-<p class="title">La marque</p>
-<span class="icon icon-minus"><i class="fal fa-minus"></i></span>
-<span class="icon icon-plus"><i class="fal fa-plus"></i></span>
-</div>
-<div id="collapse-links-2" class="collapse-content collapse" data-parent=".mkx-collapse">
-<div class="collapse-inner">
-<ul id="footer_sub_menu_2">
-<li><a id="link-custom-page-entreprise-a-mission-2" class="custom-page-link" href="https://petitefriture.com/fr/page/entreprise-a-mission" title="">Entreprise à mission</a>
-</li>
-<li><a id="link-custom-page-contactez-petite-friture-2" class="custom-page-link" href="http://petitefriture.com/fr/page/contacter-petite-friture" title="">Contactez Petite Friture</a>
-</li>
-<li><a id="link-custom-page-decouvrez-notre-equipe-2" class="custom-page-link" href="http://petitefriture.com/fr/page/equipe" title="">Découvrez notre équipe</a>
-</li>
-<li><a id="link-custom-page-rejoignez-nous--2" class="custom-page-link" href="https://www.welcometothejungle.com/fr/companies/petite-friture" title="" target="_blank">Rejoignez-nous !</a>
-</li>
-<li><a id="link-custom-page-presse-2" class="custom-page-link" href="http://petitefriture.com/fr/page/contacter-petite-friture" title="">Presse</a>
-</li>
-<li><a id="link-custom-page-devenez-revendeur-2" class="custom-page-link" href="http://petitefriture.com/fr/page/contacter-petite-friture" title="">Devenez Revendeur</a>
-</li>
-<li><a id="link-custom-page-contract-2" class="custom-page-link" href="http://petitefriture.com/fr/page/contacter-petite-friture" title="">Contract</a>
-</li>
-<li><a id="link-custom-page-podcasts-2" class="custom-page-link" href="https://podcasters.spotify.com/pod/show/petite-friture/episodes/LE-DESIGN-SENSIBLE-DE-CONSTANCE-GUISSET-e21l2o9" title="" target="_blank">Podcasts</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="linklist">
-<div class="row mkx-collapse-2 collapse-links">
-</div>
-</div>
-<script async="">
-  
-
-
-  class clrzVarnish {
-
-    constructor() {
-      this.setCurencyCookie();
-      this.displayCartCount();
-      this.displayPopin2ndChance();
-      this.setCartUrl();
-      setInterval(() => {
-        this.displayCartCount();
-      }, 1000);
-    }
-
-    function
-
-    setCookie(name, value, days) {
-      let expires = "";
-      if (days) {
-        var date = new Date();
-        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-        expires = "; expires=" + date.toUTCString();
-      }
-      document.cookie = name + "=" + (value || "") + expires + "; path=/";
-    }
-
-    getCookie(name) {
-      const value = `; ${document.cookie}`;
-      const parts = value.split(`; ${name}=`);
-      if (parts.length === 2) {
-        var val = parts.pop().split(';').shift();
-      }
-      return (typeof val === 'undefined') ? 0 : val;
-    }
-
-    setCurencyCookie() {
-      const urlParams = new URLSearchParams(window.location.search);
-
-      if (urlParams.get('SubmitCurrency') == "1") {
-        this.setCookie('id_currency', urlParams.get('id_currency'), 1);
-      }
-    }
-
-    setCartUrl() {
-      let cartElement = document.getElementsByClassName('cart-products-count')[0].parentNode;
-      cartElement.style.cursor = "pointer";
-      cartElement.addEventListener("click", function () {
-        document.location.href = lineven_rlp.module.urls.cart_url
-      });
-    }
-
-    displayCartCount() {
-      document.getElementsByClassName('cart-products-count')[0].innerHTML = this.getCookie("total_cart_items");
-    }
-
-    displayPopin2ndChance() {
-      if(this.getCookie("customer_is_logged") === '0'){
-        setTimeout(function(){
-          const customer_is_not_logged = new Event('customer_is_not_logged');
-          document.dispatchEvent(customer_is_not_logged);
-        }, 1000)
-      }
-    }
-
-  }
-
-  new clrzVarnish()
-
-  
-</script>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+                
 				</div>
 				</div>
 				</body>
