--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 						<a href="https://linkedin.com/in/clairepaoletti" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>, or
 						<a href="https://instagram.com/clairepao/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
                         <ul class="social-links">
-                            <li><a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/pinterest.svg" width="20" height="20"></a></li>
-                            <li><a href="https://www.instagram.com/clairepao"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/instagram.svg" width="20" height="20"></a></li>
-                            <li><a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/linkedin.svg" width="20" height="20"></a></li>
+                        <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/pinterest.svg" width="20" height="20"></a>
+                        <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/instagram.svg" width="20" height="20"></a>
+                        <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/linkedin.svg" width="20" height="20"></a>
                             </ul>
 					</div>					
                 </p>
