--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     Hey there! I'm Claire Paoletti, the fun-loving Lead Designer and PM at <a href="https://www.castordoc.com/">Castor</a>, Paris.
                 </p>
                 <p>
-                    I help data enthusiasts stop pulling their hair out by creating an awesome tool inspired by the likes of Uber’s Databook, Airbnb’s Data Portal, and Lyft’s Amundsen. Our solution makes documenting data as easy as pie (and who doesn't love pie? 🥧)!
+                    I help data enthusiasts stop pulling their hair out by creating an awesome tool. Our solution makes documenting data as easy as pie (and who doesn't love pie? 🥧)!
                 </p>
                 <p>
                     Don't be shy, let's connect:
@@ -42,13 +42,12 @@
 				<div class="social-links">
 				<a href="mailto:paoletticlaire@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>,
 				<a href="https://twitter.com/clairepao" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>,
-				<a href="https://dribbble.com/clairepaoletti" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a>,
-				<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>,
-                <ul class="social-links">
+				<a href="https://dribbble.com/clairepaoletti" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a> and
+				<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>
                  <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/pinterest.svg" width="20" height="20"></a>
                  <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/instagram.svg" width="20" height="20"></a>
                  <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/linkedin.svg" width="20" height="20"></a>
-                  </ul>
+                
 				</div>					
                 </p>
                 <br>
