--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
 				<div class="social-links">
 				<a href="mailto:paoletticlaire@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>,
 				<a href="https://twitter.com/clairepao" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>,
-				<a href="https://dribbble.com/clairepaoletti" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a> and
 				<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>
-                 <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/pinterest.svg" width="20" height="20"></a>
-                 <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/instagram.svg" width="20" height="20"></a>
-                 <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="https://petitefriture.com/themes/petitefriture/_dev/img/icon/social/linkedin.svg" width="20" height="20"></a>
-                
+                 <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/pinterest.svg" width="20" height="20"></a>
+                 <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/instagram.svg" width="20" height="20"></a>
+                 <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/linkedin.svg width="20" height="20"></a>
+                 <a href="https://dribbble.com/clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/dribbble.svg" width="20" height="20"></a>
+                 <a href="https://medium.com/@clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/medium.svg" width="20" height="20"></a>
+
 				</div>					
                 </p>
                 <br>
