--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 				<a href="https://twitter.com/clairepao" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>,
 				<a href="https://medium.com/@clairepaoletti" target="_blank"><i class="fab fa-medium"></i> Medium</a>
                  <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/pinterest.svg" width="20" height="20"></a>
-                 <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/instagram.svg" width="20" height="20"></a>
-                 <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/linkedin.svg width="20" height="20"></a>
+                 <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="img/instagram.svg" width="20" height="20"></a>
+                 <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/linkedin.svg width=" width="20" height="20"></a>
                  <a href="https://dribbble.com/clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/dribbble.svg" width="20" height="20"></a>
                  <a href="https://medium.com/@clairepaoletti"><img loading="lazy" src="/Users/clairepaoletti/Documents/GitHub/clairepao.github.io/img/medium.svg" width="20" height="20"></a>
 
