--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <p>
 				<div class="social-links">
                 <br>
-                 <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="img/pinterest.svg" width="20" height="20"></a> 
-                 <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="img/instagram.svg" width="20" height="20"></a>
-                 <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="img/linkedin.svg" width="20" height="20"></a>
-                 <a href="https://dribbble.com/clairepaoletti"><img loading="lazy" src="img/dribbble.svg" width="20" height="20"></a>
-                 <a href="https://medium.com/@clairepaoletti"><img loading="lazy" src="img/medium.svg" width="20" height="20"></a>
-                 <a href="https://twitter.com/clairepao"><img loading="lazy" src="img/twitter.svg" width="20" height="20"></a>
-                 <a href="mailto:paoletticlaire@gmail.com"><img loading="lazy" src="img/email.svg" width="20" height="20" padding-left: 20px;></a>
+                 <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="img/pinterest.svg" width="20" height="20" style="margin-right: 10px;"></a> 
+                 <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="img/instagram.svg" width="20" height="20" style="margin-right: 10px;"></a>
+                 <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="img/linkedin.svg" width="20" height="20" style="margin-right: 10px;"></a>
+                 <a href="https://dribbble.com/clairepaoletti"><img loading="lazy" src="img/dribbble.svg" width="20" height="20" style="margin-right: 10px;"></a>
+                 <a href="https://medium.com/@clairepaoletti"><img loading="lazy" src="img/medium.svg" width="20" height="20" style="margin-right: 10px;"></a>
+                 <a href="https://twitter.com/clairepao"><img loading="lazy" src="img/twitter.svg" width="20" height="20" style="margin-right: 10px;"></a>
+                 <a href="mailto:paoletticlaire@gmail.com"><img loading="lazy" src="img/email.svg" width="20" height="20" style="margin-right: 10px;"></a>
 				</div>					
                 </p>
                 <br>
