--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="pao-section pao-description">
                 <p>
-                    Hey there! I'm Claire Paoletti, the fun-loving Lead Designer and PM at <a href="https://www.castordoc.com/">Castor</a>, Paris.
+                    Hey there! I'm Claire Paoletti, the Lead Designer and PM at <a href="https://www.castordoc.com/">Castor</a>, Paris.
                 </p>
                 <p>
                     I help data enthusiasts stop pulling their hair out by creating an awesome tool. Our solution makes documenting data as easy as pie (and who doesn't love pie? 🥧)!
