--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Hey there! I'm Claire Paoletti, the Lead Designer and PM at <a href="https://www.castordoc.com/">Castor</a>, Paris.
                 </p>
                 <p>
-                    I help data enthusiasts stop pulling their hair out by creating an awesome tool. Our solution makes documenting data as easy as pie (and who doesn't love pie? 🥧)!
+                    I help data enthusiasts stop pulling their hair out by creating an awesome tool. Our solution makes documenting data as easy as pie (and who doesn't love pie?!
                 </p>
                 <p>
                     Don't be shy, let's connect:
