--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 <p>
                     Hey there! I'm Claire Paoletti, the Lead Designer and PM at <a href="https://www.castordoc.com/">Castor</a>, Paris.
                 </p>
-                <p>
-                    I help data enthusiasts stop pulling their hair out by creating an awesome tool. Our solution makes documenting data as easy as pie (and who doesn't love pie?!
+                <p>I specialize in helping data enthusiasts keep their hair on their heads. With our awesome tool, documenting data has never been easier. Say goodbye to the headache and hello to simplicity.
                 </p>
                 <p>
                     Don't be shy, let's connect:
