--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                  <a href="https://medium.com/@clairepaoletti"><img loading="lazy" src="img/medium.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="https://twitter.com/clairepao"><img loading="lazy" src="img/twitter.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="mailto:paoletticlaire@gmail.com"><img loading="lazy" src="img/email.svg" width="20" height="20" style="margin-right: 10px;"></a>
+                 <a href="https://www.figma.com/@clairepao"><img loading="lazy" src="img/figma.svg" width="20" height="20" style="margin-right: 10px;"></a>
 				</div>					
                 </p>
                 <br>
