--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>
 				<div class="social-links">
                 <br>
-                 <a href="https://www.pinterest.fr/clairepao/"><img loading="lazy" src="img/pinterest.svg" width="20" height="20" style="margin-right: 10px;"></a> 
+                 <a href="https://www.pinterest.fr/clairepao/" title="My Pinterest with almost everything in my head at the moment"></a>><img loading="lazy" src="img/pinterest.svg" width="20" height="20" style="margin-right: 10px;"></a> 
                  <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="img/instagram.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="img/linkedin.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="https://dribbble.com/clairepaoletti"><img loading="lazy" src="img/dribbble.svg" width="20" height="20" style="margin-right: 10px;"></a>
