--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>
 				<div class="social-links">
                 <br>
-                 <a href="https://www.pinterest.fr/clairepao/" title="My Pinterest with almost everything in my head at the moment"></a><img loading="lazy" src="img/pinterest.svg" width="20" height="20" style="margin-right: 10px;"></a> 
+                 <a href="https://www.pinterest.fr/clairepao/"></a><img loading="lazy" src="img/pinterest.svg" width="20" height="20" style="margin-right: 10px;"></a> 
                  <a href="https://www.instagram.com/clairepao"><img loading="lazy" src="img/instagram.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="https://fr.linkedin.com/in/clairepaoletti"><img loading="lazy" src="img/linkedin.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="https://dribbble.com/clairepaoletti"><img loading="lazy" src="img/dribbble.svg" width="20" height="20" style="margin-right: 10px;"></a>
@@ -48,16 +48,6 @@
                  <a href="mailto:paoletticlaire@gmail.com"><img loading="lazy" src="img/email.svg" width="20" height="20" style="margin-right: 10px;"></a>
                  <a href="https://www.figma.com/@clairepao"><img loading="lazy" src="img/figma.svg" width="20" height="20" style="margin-right: 10px;"></a>
 				</div>					
-                <div class="social-links">
-                    <br>
-                    <a href="https://www.pinterest.fr/clairepao/" title="My Pinterest with almost everything in my head at the moment"><img loading="lazy" src="img/pinterest.svg" width="20" height="20"></a> 
-                    <a href="https://www.instagram.com/clairepao" title="My Instagram with pictures of cats and food"><img loading="lazy" src="img/instagram.svg" width="20" height="20"></a>
-                    <a href="https://fr.linkedin.com/in/clairepaoletti" title="My LinkedIn with all the boring stuff about my work"><img loading="lazy" src="img/linkedin.svg" width="20" height="20"></a>
-                    <a href="https://dribbble.com/clairepaoletti" title="My Dribbble with all the cool stuff about my work"><img loading="lazy" src="img/dribbble.svg" width="20" height="20"></a>
-                    <a href="https://medium.com/@clairepaoletti" title="My Medium with all my hot takes on design"><img loading="lazy" src="img/medium.svg" width="20" height="20"></a>
-                    <a href="https://twitter.com/clairepao" title="My Twitter with my occasional witty remarks"><img loading="lazy" src="img/twitter.svg" width="20" height="20"></a>
-                    <a href="mailto:paoletticlaire@gmail.com" title="Email me if you want to chat!"><img loading="lazy" src="img/email.svg" width="20" height="20"></a>
-                </div>
                 
                 </p>
                 <br>
